--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,12 @@ Jinja2==2.7.3
 MarkupSafe==0.23
 Werkzeug==0.10.1
 aniso8601==0.92
+gevent==1.0.1
+greenlet==0.4.5
 gunicorn==19.2.1
 itsdangerous==0.24
 pymongo==2.8
 pytz==2014.10
+redis==2.10.3
 six==1.9.0
 wsgiref==0.1.2
