--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,11 @@ aniso8601==0.92
 gevent==1.0.1
 greenlet==0.4.5
 gunicorn==19.2.1
+httplib2==0.9
 itsdangerous==0.24
 pymongo==2.8
 pytz==2014.10
 redis==2.10.3
 six==1.9.0
+twilio==3.7.2
 wsgiref==0.1.2
